syntax = "proto3";

option go_package = "calculatorpb";

message SumRequest{
    int32 number1 = 1;
    int32 number2 = 2;
}

message SumResponse{
    int32 result = 1;
}

message PrimeRequest{
    int32 number = 1;
}

message PrimeResponse{
    int32 number =1;
}

message ComputeAverageRequest{
    int32 numberavg = 1;
}

message ComputeAverageResponse{
    double average = 1;
}

message FindMaximumRequest{
    int32 number = 1;
}
message FindMaximumResponse{
    int32 maximum = 1;
}

message SquareRootRequest{
    int32 number = 1;
}

message SquareRootResponse{
    double number_root = 1;
}

service CalculatorService{
    //Unary
    rpc Sum(SumRequest) returns (SumResponse){};
    //Server Streaming
    rpc Prime(PrimeRequest) returns (stream PrimeResponse){};

    //Client Streaming
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse){};

    //Bidirectional Streaming
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse){};
      //error handling
      //this RPC will throw an exception if the sent number is negative
      //this error being sent is of type INVALID_ARGUMENT
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse){};
}